--- a/CSS/StyleSheet.css
+++ b/CSS/StyleSheet.css
@@ -5,6 +5,7 @@
 
 p {
     background-color: antiquewhite;
+    font-size:24px;
 }
 
 .row {
@@ -16,6 +17,13 @@ p {
 }
 
 
+.box {
+    background-color: lightgrey;
+    width: 300px;
+    border: 10px;
+    padding: 50px;
+    margin: 20px;
+}
 
 .left {
     float: left;
